fixing proj spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1417,7 +1417,7 @@
 		font-size: 12pt;
 		font-weight: 400;
 		letter-spacing: 0.075em;
-		line-height: 1em;
+		line-height: 1.2em;
 	}
 
 		@media screen and (max-width: 1680px) {
@@ -1477,7 +1477,7 @@
 		font-weight: 800;
 		letter-spacing: 0.225em;
 		line-height: 1em;
-		margin: 0 0 1em 0;
+		margin: 0 0 4px 0;
 		text-transform: uppercase;
 	}
 
